# envstack

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  TRADEMARKS.md  default.env  dev.env  dist.json  make.bat  pyproject.toml  pytest.ini  requirements.txt  setup.py  stack.env
.github/workflows/: tests.yml
docs/: api.md  comparison.md  design.md  examples.md  faq.md  index.md  secrets.md
env/: cache.env  default.env  dev.env  distman.env  hello.env  prod.env  project.env  secrets.env  test.env  thing.env
examples/default/: README.md  default.env  dev.env  test.env
examples/encryption/: README.md  keys.env  secrets.env
examples/hello/: README.md
examples/misc/: README.md  thing.env
examples/project/: README.md
examples/wrappers/: README.md  hello.env
lib/envstack/: __init__.py  cli.py  config.py  encrypt.py  env.py  envshell.py  exceptions.py  logger.py  node.py  path.py  setenv.py  util.py  wrapper.py
lib/tests/: test_env.py
tests/: test_cmds.py  test_encrypt.py  test_env.py  test_node.py  test_path.py  test_util.py  test_wrapper.py
tests/fixtures/env/: default.env  test.env  thing.env
